adds APIs and chatterbox voice clone works

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,11 @@ DOPPELGANGER_DATABASE__POOL_MAX_OVERFLOW=10
 DOPPELGANGER_TTS__MODEL_NAME=chatterbox
 DOPPELGANGER_TTS__DEVICE=cuda
 DOPPELGANGER_TTS__VOICES_DIR=voices
+DOPPELGANGER_TTS__EXAGGERATION=0.5
+DOPPELGANGER_TTS__CFG_WEIGHT=0.5
+DOPPELGANGER_TTS__TEMPERATURE=0.8
+DOPPELGANGER_TTS__CHUNK_SIZE=50
+DOPPELGANGER_TTS__CACHE_MAX_SIZE=100
 
 # Discord
 DOPPELGANGER_DISCORD__TOKEN=your-bot-token-here
