--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,23 @@ dependencies = [
     "alembic>=1.14.0",
     "psycopg2-binary>=2.9.0",
     "httpx>=0.28.0",
+    "python-multipart>=0.0.20",
 ]
+
+[project.optional-dependencies]
+tts = ["chatterbox-tts>=0.1.6", "setuptools>=75.0.0,<81"]
 
 [dependency-groups]
 dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.25.0",
+    "testcontainers[postgres]>=4.0.0",
     "ruff>=0.9.0",
     "basedpyright>=1.25.0",
 ]
+
+[tool.uv]
+override-dependencies = ["numpy>=1.26.0,<2.4", "ml-dtypes>=0.3.0", "pandas>=2.2.0"]
 
 [build-system]
 requires = ["hatchling"]
@@ -51,3 +59,4 @@ venv = ".venv"
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
+markers = ["integration: requires Docker (testcontainers)"]
