base discord bot joins/leaves and plays sound

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ DOPPELGANGER_TTS__DEVICE=cuda
 DOPPELGANGER_TTS__VOICES_DIR=voices
 DOPPELGANGER_TTS__EXAGGERATION=0.1
 DOPPELGANGER_TTS__CFG_WEIGHT=3.0
-DOPPELGANGER_TTS__TEMPERATURE=0.5
+DOPPELGANGER_TTS__TEMPERATURE=0.2
 DOPPELGANGER_TTS__CHUNK_SIZE=50
 DOPPELGANGER_TTS__CACHE_MAX_SIZE=100
 
@@ -28,3 +28,5 @@ DOPPELGANGER_DISCORD__TOKEN=
 DOPPELGANGER_DISCORD__GUILD_ID=
 DOPPELGANGER_DISCORD__REQUIRED_ROLE_ID=
 DOPPELGANGER_DISCORD__COOLDOWN_SECONDS=5
+DOPPELGANGER_DISCORD__ENTRANCE_SOUND=
+DOPPELGANGER_DISCORD__COMMAND_PREFIX=
