--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
     "httpx>=0.28.0",
     "python-multipart>=0.0.20",
+    "discord.py[voice]>=2.4.0",
 ]
 
 [project.optional-dependencies]
