adds tts request queue

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,5 @@ DOPPELGANGER_DISCORD__REQUIRED_ROLE_ID=
 DOPPELGANGER_DISCORD__COOLDOWN_SECONDS=5
 DOPPELGANGER_DISCORD__ENTRANCE_SOUND=
 DOPPELGANGER_DISCORD__COMMAND_PREFIX=
+DOPPELGANGER_DISCORD__MAX_QUEUE_DEPTH=20
+DOPPELGANGER_DISCORD__REQUESTS_PER_MINUTE=3
