adds orpheus tts engine config

--- a/.env.example
+++ b/.env.example
@@ -13,15 +13,20 @@ DOPPELGANGER_DATABASE__NAME=doppelganger
 DOPPELGANGER_DATABASE__POOL_SIZE=5
 DOPPELGANGER_DATABASE__POOL_MAX_OVERFLOW=10
 
-# TTS
-DOPPELGANGER_TTS__MODEL_NAME=chatterbox
-DOPPELGANGER_TTS__DEVICE=cuda
-DOPPELGANGER_TTS__VOICES_DIR=voices
-DOPPELGANGER_TTS__EXAGGERATION=0.1
-DOPPELGANGER_TTS__CFG_WEIGHT=3.0
-DOPPELGANGER_TTS__TEMPERATURE=0.2
-DOPPELGANGER_TTS__CHUNK_SIZE=50
-DOPPELGANGER_TTS__CACHE_MAX_SIZE=100
+# Shared TTS
+DOPPELGANGER_VOICES_DIR=voices
+DOPPELGANGER_CACHE_MAX_SIZE=100
+
+# Chatterbox (zero-shot voice cloning)
+DOPPELGANGER_CHATTERBOX__DEVICE=cuda
+DOPPELGANGER_CHATTERBOX__EXAGGERATION=0.1
+DOPPELGANGER_CHATTERBOX__CFG_WEIGHT=3.0
+DOPPELGANGER_CHATTERBOX__TEMPERATURE=0.2
+DOPPELGANGER_CHATTERBOX__CHUNK_SIZE=50
+
+# Orpheus (LoRA fine-tuned voices via vLLM)
+# DOPPELGANGER_ORPHEUS__ENABLED=false
+# DOPPELGANGER_ORPHEUS__VLLM_BASE_URL=http://localhost:8001/v1
 
 # Discord
 DOPPELGANGER_DISCORD__TOKEN=
