adds orpheus tuning and lora adapter loading

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Application
-DOPPELGANGER_DEBUG=false
+DOPPELGANGER_DEBUG=true
 DOPPELGANGER_HOST=0.0.0.0
 DOPPELGANGER_PORT=8000
 DOPPELGANGER_ALLOWED_ORIGINS=["*"]
@@ -17,16 +17,17 @@ DOPPELGANGER_DATABASE__POOL_MAX_OVERFLOW=10
 DOPPELGANGER_VOICES_DIR=voices
 DOPPELGANGER_CACHE_MAX_SIZE=100
 
-# Chatterbox (zero-shot voice cloning)
+# Chatterbox TTS
 DOPPELGANGER_CHATTERBOX__DEVICE=cuda
-DOPPELGANGER_CHATTERBOX__EXAGGERATION=0.1
+DOPPELGANGER_CHATTERBOX__EXAGGERATION=0.3
 DOPPELGANGER_CHATTERBOX__CFG_WEIGHT=3.0
-DOPPELGANGER_CHATTERBOX__TEMPERATURE=0.2
+DOPPELGANGER_CHATTERBOX__TEMPERATURE=0.75
 DOPPELGANGER_CHATTERBOX__CHUNK_SIZE=50
 
-# Orpheus (LoRA fine-tuned voices via vLLM)
-# DOPPELGANGER_ORPHEUS__ENABLED=false
-# DOPPELGANGER_ORPHEUS__VLLM_BASE_URL=http://localhost:8001/v1
+# Orpheus TTS
+DOPPELGANGER_ORPHEUS__ENABLED=true
+DOPPELGANGER_ORPHEUS__VLLM_BASE_URL=http://localhost:8001/v1
+HUGGING_FACE_HUB_TOKEN=
 
 # Discord
 DOPPELGANGER_DISCORD__TOKEN=
@@ -35,5 +36,3 @@ DOPPELGANGER_DISCORD__REQUIRED_ROLE_ID=
 DOPPELGANGER_DISCORD__COOLDOWN_SECONDS=5
 DOPPELGANGER_DISCORD__ENTRANCE_SOUND=
 DOPPELGANGER_DISCORD__COMMAND_PREFIX=
-DOPPELGANGER_DISCORD__MAX_QUEUE_DEPTH=20
-DOPPELGANGER_DISCORD__REQUESTS_PER_MINUTE=3
