--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ build/
 *.swp
 *.swo
 *~
+.ruff_cache/
 
 # Model files
 *.pt
@@ -25,13 +26,6 @@ build/
 *.bin
 *.safetensors
 *.onnx
-
-# Audio files
-*.wav
-*.mp3
-*.opus
-*.flac
-*.ogg
 
 # Keep .gitkeep files
 !.gitkeep
@@ -50,3 +44,8 @@ frontend/node_modules/
 
 # Temp directory
 tmp/
+
+# Audio
+prepared/
+raw_audio/
+voices/
