--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "sass-embedded": "^1.97.3",
     "svelte": "^5.45.2",
+    "typescript": "^5.9.3",
     "vite": "^7.3.1"
   },
   "dependencies": {
