misc tweaks and clean up

--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,9 @@ DOPPELGANGER_CACHE_MAX_SIZE=100
 
 # Chatterbox TTS
 DOPPELGANGER_CHATTERBOX__DEVICE=cuda
-DOPPELGANGER_CHATTERBOX__EXAGGERATION=0.3
+DOPPELGANGER_CHATTERBOX__EXAGGERATION=0.1
 DOPPELGANGER_CHATTERBOX__CFG_WEIGHT=3.0
-DOPPELGANGER_CHATTERBOX__TEMPERATURE=0.75
+DOPPELGANGER_CHATTERBOX__TEMPERATURE=0.5
 DOPPELGANGER_CHATTERBOX__CHUNK_SIZE=50
 
 # Orpheus TTS
@@ -35,4 +35,7 @@ DOPPELGANGER_DISCORD__GUILD_ID=
 DOPPELGANGER_DISCORD__REQUIRED_ROLE_ID=
 DOPPELGANGER_DISCORD__COOLDOWN_SECONDS=5
 DOPPELGANGER_DISCORD__ENTRANCE_SOUND=
+DOPPELGANGER_DISCORD__MAX_TEXT_LENGTH=255
+DOPPELGANGER_DISCORD__MAX_QUEUE_DEPTH=20
+DOPPELGANGER_DISCORD__REQUESTS_PER_MINUTE=3
 DOPPELGANGER_DISCORD__COMMAND_PREFIX=
